[package]
name = "defender_rs"
version = "0.1.3"
edition = "2024"

[lib]
name = "defender_core"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "defender"
path = "src/main.rs"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    # 注册计划任务
    "Win32_System_Variant",
] }

[build-dependencies]
winres = "0.1.12"
